# password-generator

./: .speckit-state.json  CLAUDE.md  LICENSE  pyproject.toml
.specify/memory/: constitution.md
passgen/: cli.py  clipboard.py  generator.py
specs/001-cli-password-gen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-password-gen/checklists/: requirements.md
specs/001-cli-password-gen/contracts/: cli-interface.md
tests/integration/: test_passgen.py
tests/unit/: test_cli.py  test_generator.py
