[project]
name = "passgen"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pyperclip>=1.8"]

[project.scripts]
passgen = "passgen.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
include = ["passgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
